--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -6,13 +6,16 @@
             <th>Airline</th>
             <th>Airport</th>
             <th>Flight Number</th>
+            <th>Departure Date</th>
           </tr>
         </thead>
         <tbody>
           <% flights.forEach(function(f) { %>
             <tr>
-              <td><%= f.arline %></td>
+              <td><%= f.airline %></td>
               <td><%= f.airport %></td>
+              <td><%= f.flightNo %></td>
+              <td><%= f.departs %></td>
               <td><a href="/flights/<%= f._id %>">DETAILS</a></td>
             </tr>
             <% }); %>
