--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -1,28 +1,40 @@
 <%- include('../partials/header') %>
-    <h2>views/flights/new</h2>
-    <h2>Enter a New Flight</h2>
-    <form id="new-form" action="/flights" method="POST">
-      <label>Title: 
-      <input type="text" name="title">
-      </label><br>
-      <label>Release Year:
-        <input type="number" name="releaseYear">
-      </label><br>
-      <label>MPAA Rating
-        <select name="mpaaRating">
-          <option value="G">G</option>
-          <option value="PG">PG</option>
-          <option value="PG-13">PG-13</option>
-          <option value="R">R</option>
-        </select>
-      </label><br>
-      <label>Cast (separate actors with commas):
-        <input type="text" name="cast">
-      </label><br>
-      <label>Now Showing:
-        <input type="checkbox" name="nowShowing" checked>
-      </label><br>
-      <button type="submit">Add Flight</button>
-    </form>
-    
-<%- include('../partials/footer') %>
+<h2>views/flights/new</h2>
+<h2>Enter a New Flight</h2>
+
+<form action="/flights" method="POST">
+  <label>Airport</label>
+  <select name="airport">
+    <option value="AUS">AUS</option>
+    <option value="DFW">DFW</option>
+    <option value="DEN" selected>DEN</option>
+  </select>
+  <label>Airline:</label>
+  <select name="airline">
+    <option value="Delta" selected>Delta</option>
+    <option value="United">United</option>
+    <option value="Southwest">Southwest</option>
+    <option value="American">American</option>
+  </select>
+  <label>Flight Number:</label>
+  <input name="flightNo" type="number" min="10" max="9999" value="100" required>
+  <input name="departs" type="date" id="datePicker">
+  <input type="submit" value="Add Flight">
+</form>
+
+<script>
+var date = new Date();
+
+var day = date.getDate();
+var month = date.getMonth() + 1;
+var year = date.getFullYear() + 1;
+
+if (month < 10) month = "0" + month;
+if (day < 10) day = "0" + day;
+
+var today = year + "-" + month + "-" + day;       
+document.getElementById("datePicker").value = today;
+console.log(new Date(Date.now()).toString());
+</script>
+
+<%- include('../partials/footer') %>	
