--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -8,6 +8,9 @@
     <option value="AUS">AUS</option>
     <option value="DFW">DFW</option>
     <option value="DEN" selected>DEN</option>
+    <option value="LAX">LAX</option>
+    <option value="SAN">SAN</option>
+    <option value="SEA">SEA</option>
   </select>
   <label>Airline:</label>
   <select name="airline">
