--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,15 @@
 
 <!DOCTYPE html>
 <html>
+  <nav>
+    <a href="/flights/new" >ADD Flight</a>
+    <a href="/flights" >ALL Flights</a>
+  </nav>
   <head>
-    <title><%= title %></title>
+    <title>Flight</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Flight</h1>
   </body>
-  <nav>
-    <a href="/flights/new" <%- title === 'Add Flight' ? 'class="active"' : '' %>>ADD Flight</a>
-    <a href="/flights" <%- title === 'All Flights' ? 'class="active"' : '' %>>ALL Flights</a>
-  </nav>
+  
